# news_aggregator_v2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yaml  docker.env
backend/: .env  Cargo.toml  Dockerfile  docker.env
backend/migrations/2023-12-12-101645_create_user/: up.sql
backend/migrations/2023-12-13-053047_create_news/: up.sql
backend/migrations/2024-03-16-130235_create_feed/: down.sql  up.sql
backend/src/: error.rs  jwt_auth.rs  jwt_middleware.rs  lib.rs  main.rs  schema.rs  setup.rs
backend/src/api/: admin.rs  auth.rs  feeds.rs  mod.rs  models.rs  news.rs
backend/src/background_jobs/: mod.rs  rss.rs
backend/src/db/: mod.rs
backend/src/db/feeds/: feeds.rs  mod.rs  models.rs
backend/src/db/news/: mod.rs  models.rs  news.rs
backend/src/db/user/: models.rs  user.rs
frontend/: .env  package-lock.json  package.json
frontend/src/: App.js  colors.css  index.js
frontend/src/Layouts/: MainLayout.jsx
frontend/src/Layouts/MainLayout/: MainLayout.css  MainLayout.jsx
frontend/src/Layouts/ScrollLayout/: ScrollLayout.jsx
frontend/src/Layouts/StaticLayout/: StaticLayout.jsx
frontend/src/Layouts/TableLayout/: TableLayout.css  TableLayout.jsx
frontend/src/_helpers/: CustomFetchHook.jsx  FetchHelper.jsx  UseInViewport.jsx  UsePersistent.jsx
frontend/src/_store/: errorSlice.js  querySlice.js  store.js  userSlice.js
frontend/src/app/info/: page.js
frontend/src/components/: error_boundary.js
frontend/src/components/acticle/: article.jsx
frontend/src/components/backend_api/: admin.jsx  channels.jsx  login.jsx  news.js  news.jsx
frontend/src/components/main_page/: news_block.jsx
frontend/src/components/main_page/NewsBlock/: NewsBlock.css  NewsBlock.jsx
frontend/src/components/main_page/QuerySettings/: QuerySettings.css  QuerySettings.jsx
frontend/src/components/navigation/Header/: NavBar.jsx
frontend/src/components/navigation/InfoPopover/: InfoPopover.css  InfoPopover.jsx
frontend/src/components/navigation/NavBar/: NavBar.jsx
frontend/src/components/user/: login_form.jsx  preferences.jsx  register_form.jsx
frontend/src/pages/: ListSourcesPage.jsx  LoginPage.jsx  MainPage.jsx  ThemesPage.jsx
frontend/src/pages/LoginPage/: LoginPage.css  LoginPage.jsx
frontend/src/pages/RegisterPage/: RegisterPage.jsx
frontend/src/pages/User/: SettingsPage.jsx
frontend/src/pages/admin/: ListSourcesPage.jsx  ListThemesPage.jsx  ListUsersPage.jsx
migrations/2023-12-12-101645_create_user/: down.sql  up.sql
migrations/2023-12-13-053047_create_news/: down.sql  up.sql
src/: error.rs  lib.rs  main.rs  models.rs  schema.rs
src/api/: auth.rs  mod.rs  news.rs
src/background_jobs/: mod.rs  rss.rs
src/db/: mod.rs  models.rs  user.rs
src/db/news/: models.rs  news.rs
src/db/user/: mod.rs  models.rs  user.rs
