[package]
name = "rust_news_aggregator_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
diesel = {version ="2.1.4", features=["postgres", "r2d2", "chrono", "postgres_backend"]}
dotenv = "0.15.0"
# r2d2 = "0.8.10"
