[package]
name = "rust_news_aggregator_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-rt = "2.9.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = "4.4.0"
anyhow = "1.0.75"
apalis = { version = "0.4.7", features = ["postgres"] }
bcrypt = "0.15.0"
chrono = "0.4.31"
derive_more = "0.99.17"
diesel = {version ="2.1.4", features=["postgres", "r2d2", "chrono", "postgres_backend"]}
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.10.1"
itertools = "0.12.0"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
# r2d2 = "0.8.10"
