[package]
name = "rust_news_aggregator_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.4"
chrono = { version = "0.4.31", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.1.4", features = ["postgres", "chrono", "postgres_backend"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
dotenv = "0.15.0"
itertools = "0.12.0"
rss = "2.0.6"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_derive = "1.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
tokio = { version = "1.36.0", features = ["full"] }
reqwest = "0.12.1"
argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
time = "0.3.34"
rand_core = { version = "0.6.4", features = ["std"] }